--- a/WebApp/Pages/FetchData.razor
+++ b/WebApp/Pages/FetchData.razor
@@ -1,6 +1,6 @@
 ﻿@page "/fetchdata"
 
-@using WebApp.Data
+@using Web.WebApp.Data
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
