--- a/WebApp/_Imports.razor
+++ b/WebApp/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using WebApp
-@using WebApp.Shared
+@using Web.WebApp
+@using Web.WebApp.Shared
