--- a/src/Web.WebApp/Shared/NavMenu.razor
+++ b/src/Web.WebApp/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@using Core.Domain.Constants
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">WebApp</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -12,8 +13,34 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
+        <AuthorizeView Roles=@UserBaseRole.Admin>
+            <Authorized>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="/admin" Match="NavLinkMatch.All">
+                        <span class="oi oi-person" aria-hidden="true"></span> Admin
+                    </NavLink>
+                </li>
+            </Authorized>
+        </AuthorizeView>
+        <AuthorizeView>
+            <Authorized>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="/account/logout" Match="NavLinkMatch.All">
+                        <span class="oi oi-person" aria-hidden="true"></span> Log Out
+                    </NavLink>
+                </li>
+            </Authorized>
+            <NotAuthorized>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="/account/login" Match="NavLinkMatch.All">
+                        <span class="oi oi-account-logout" aria-hidden="true"></span> Log In
+                    </NavLink>
+                </li>
+            </NotAuthorized>
+        </AuthorizeView>
     </ul>
 </div>
+
 
 @code {
     private bool collapseNavMenu = true;
