--- a/src/Web.WebApp/Pages/_Host.cshtml
+++ b/src/Web.WebApp/Pages/_Host.cshtml
@@ -31,5 +31,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 </html>
