--- a/src/Web.WebApp/Shared/NavMenu.razor
+++ b/src/Web.WebApp/Shared/NavMenu.razor
@@ -26,14 +26,19 @@
             <Authorized>
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="/account/logout" Match="NavLinkMatch.All">
-                        <span class="oi oi-person" aria-hidden="true"></span> Log Out
+                        <span class="oi oi-power-standby" aria-hidden="true"></span> Log Out
                     </NavLink>
                 </li>
             </Authorized>
             <NotAuthorized>
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="/account/login" Match="NavLinkMatch.All">
-                        <span class="oi oi-account-logout" aria-hidden="true"></span> Log In
+                        <span class="oi oi-lock-locked" aria-hidden="true"></span> Log In
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="/account/register" Match="NavLinkMatch.All">
+                        <span class="oi oi-person" aria-hidden="true"></span> Register
                     </NavLink>
                 </li>
             </NotAuthorized>
