--- a/src/Web.WebApp/Pages/_Host.cshtml
+++ b/src/Web.WebApp/Pages/_Host.cshtml
@@ -14,7 +14,9 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="css/bootstrap-float-label.min.css" rel="stylesheet" />
     <link href="Web.WebApp.styles.css" rel="stylesheet" />
+    <link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
