--- a/src/Web.WebApp/App.razor
+++ b/src/Web.WebApp/App.razor
@@ -1,9 +1,11 @@
+@using Web.WebApp.Pages.Account
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
                 <NotAuthorized>
-                    <p>Access Denied</p>
+                    <p>You're not log in yet. You're redirected to Log In page...</p>
+                    <RedirectToLoginPage />
                 </NotAuthorized>
             </AuthorizeRouteView>
         </Found>
