--- a/src/Web.WebApp/Pages/Shared/_Layout.cshtml
+++ b/src/Web.WebApp/Pages/Shared/_Layout.cshtml
@@ -5,11 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/bootstrap-float-label.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
+    <nav class="navbar navbar-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+            <span style="font-family: 'Times New Roman', 'Times-Roman', serif; font-size: 32px">
+                <span style='color:#00796B'>T</span>
+                <span style='color:#00e8ea'>r</span>
+                <span style='color:#02befd'>a</span>
+                <span style='color:#059afa'>c</span>
+                <span style='color:#056afa'>k</span>
+                <span style='color:#0538fa'>M</span>
+                <span style='color:#5303fc'>y</span>
+                <span style='color:#7a04fb'>E</span>
+                <span style='color:#a302fd'>x</span>
+                <span style='color:#ca05fa'>p</span>
+                <span style='color:#eb04fb'>e</span>
+                <span style='color:#fb04d7'>n</span>
+                <span style='color:#fa0596'>s</span>
+                <span style='color:#fc0351'>e</span>
+            </span>
+            </a>
+            <form class="d-flex">
+                <a class="btn btn-outline" href="/account/login">Log in</a>
+                <a class="btn btn-outline" href="/account/register">Register</a>
+            </form>
+        </div>
+    </nav>
+    <div class="container pt-5">
+        @RenderBody()
+    </div>
 
-@RenderBody()
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" ></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
