--- a/src/Web.WebApp/Pages/_ViewImports.cshtml
+++ b/src/Web.WebApp/Pages/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
