--- a/src/Web.WebApp/Pages/Account/ForgotPassword.razor
+++ b/src/Web.WebApp/Pages/Account/ForgotPassword.razor
@@ -1,4 +1,4 @@
-﻿@page "/account/generateemailconfirmation"
+﻿@page "/account/forgotpassword"
 @attribute [AllowAnonymous]
 @layout BlankLayout
 @using System.ComponentModel.DataAnnotations
@@ -14,17 +14,17 @@
 @inject NavigationManager Navigation;
 @inject IWebHostEnvironment HostEnvironment;
 @inject IEmailService EmailService;
-@inject IJSRuntime JsRuntime;
+
 @inject IOptions<ReCaptchaSetting> ReCaptchaSetting
 
 <section class="d-flex justify-content-center">
     <div class="col-md-5 mb-5 card">
         <div class="card-header">
-            <h5>Email Confirmation</h5>
+            <h4>Forgot Password</h4>
         </div>
         <div class="card-body">
-            <div class="mb-3">Enter your email address to get a new verification link.</div>
-            <EditForm Model="@Input" OnValidSubmit="@GenerateConfirmationEmail">
+            <div class="mb-3">Enter email address to receive a password reset link.</div>
+            <EditForm Model="@Input" OnValidSubmit="@GenerateResetPasswordEmail">
                 <DataAnnotationsValidator/>
                 <div>
                     <div class="mb-2">
@@ -37,7 +37,7 @@
                     <div class="mb-2">
                         <button type="submit" disabled="@SubmitDisabled" class="btn btn-primary">
                             <span class="spinner-border spinner-border-sm" hidden="@(!IsSubmitting)" role="status" aria-hidden="true"></span>
-                            <span>Get email verification link</span>
+                            <span>Get password reset link</span>
                         </button>
                     </div>
                 </div>
@@ -62,17 +62,12 @@
     <textarea>@EmailConfirmLink</textarea>
 }
 
-
 @code {
-    public ConfirmEmailInput Input { get; set; } = new ConfirmEmailInput();
+    public EmailInput Input { get; set; } = new EmailInput();
     public bool IsSubmitting { get; set; }
     public bool SubmitDisabled { get; set; } = true;
     public string InfoMessage { get; set; }
     public string EmailConfirmLink { get; set; }
-
-    [Parameter]
-    [SupplyParameterFromQuery(Name = "email")]
-    public string Email { get; set; }
 
     GoogleRecaptcha googleRecaptcha;
 
@@ -82,19 +77,7 @@
         StateHasChanged();
     }
 
-    protected override void OnInitialized()
-    {
-        if (!string.IsNullOrWhiteSpace(Email))
-        {
-            Input = new ConfirmEmailInput()
-            {
-                Email = Email
-            };
-        }
-    }
-
-
-    public async Task GenerateConfirmationEmail()
+    public async Task GenerateResetPasswordEmail()
     {
         IsSubmitting = true;
         SubmitDisabled = true;
@@ -103,38 +86,39 @@
         if (!isValidCaptcha)
         {
             IsSubmitting = false;
+            SubmitDisabled = true;
             return;
         }
 
-        InfoMessage = "If your email is registered. Please check your inbox or spam folder, and click on the verification link.";
-        
+        InfoMessage = "If your email is registered. Please check your inbox or spam folder, and click on the reset password link. Thank you.";
+
         var existUser = await UserService.GetUserByEmailAsync(Input.Email);
         if (existUser == null)
         {   // DOT NOT TELL the email is invalid
             IsSubmitting = false;
-            SubmitDisabled = false;
+            SubmitDisabled = true;
             return;
         }
 
-        if (UserService.IsEmailConfirmed(existUser.Id))
+        if (!UserService.IsEmailConfirmed(existUser.Id))
         {
-            InfoMessage = "This email is already verified. <a href='/account/login'>Click here to log in</a>";
             IsSubmitting = false;
+            SubmitDisabled = true;
             return;
         }
 
-        var token = await UserService.GenerateEmailConfirmationTokenAsync(existUser.Id);
-        EmailConfirmLink = $"{Navigation.BaseUri}account/confirmemail?uid={existUser.Id}&token={HttpUtility.UrlEncode(token)}";
-        var result = EmailService.SendEmailConfirmation(Input.Email, existUser.FullName, EmailConfirmLink);
+        var token = await UserService.GeneratePasswordResetTokenAsync(existUser.Id);
+        EmailConfirmLink = $"{Navigation.BaseUri}account/resetpassword?uid={existUser.Id}&token={HttpUtility.UrlEncode(token)}";
+        var result = EmailService.SendPasswordReset(Input.Email, existUser.FullName, EmailConfirmLink);
         if (!result)
         {
-            InfoMessage = "Sorry, there was an unexpected error occured. Please try again later.";
+            InfoMessage = "Sorry, something went wrong. Please try again later.";
         }
         IsSubmitting = false;
         SubmitDisabled = true;
     }
 
-    public class ConfirmEmailInput
+    public class EmailInput
     {
         [Required(ErrorMessage = "Email is required")]
         [EmailAddress]
