--- a/src/Web.WebApp/Pages/Account/Register.razor
+++ b/src/Web.WebApp/Pages/Account/Register.razor
@@ -16,10 +16,9 @@
 @inject IEmailService EmailService;
 
 <section class="d-flex justify-content-center">
-    <div class="col-md-5 mb-5">
-        <h3>Start tracking your expenses</h3>
-        <hr />
-        <div class="row">
+    <div class="col-md-5 mb-5 card">
+        <div class="card-header"> <h5>Sign up to start tracking your expenses</h5> </div>
+        <div class="card-body">
             <EditForm Model="@Input" OnValidSubmit="@RegisterUser" class="form-floating">
                 <DataAnnotationsValidator/>
                 <div class="has-float-label mb-3">
@@ -71,30 +70,6 @@
                     </div>
                 </div>
             </EditForm>
-        </div>
-        <div class="mb-3 mt-5">
-            <div class="hr-center"><span>OR</span></div>
-        </div>
-        <div class="d-grid gap-2">
-            <button type="button" class="btn btn-light" style="width: 100%">
-                <span>
-                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M20.64 12.2c0-.63-.06-1.25-.16-1.84H12v3.49h4.84a4.14 4.14 0 0 1-1.8 2.71v2.26h2.92a8.78 8.78 0 0 0 2.68-6.62z" fill="#4285F4"></path>
-                    <path d="M12 21a8.6 8.6 0 0 0 5.96-2.18l-2.91-2.26a5.4 5.4 0 0 1-8.09-2.85h-3v2.33A9 9 0 0 0 12 21z" fill="#34A853"></path>
-                    <path d="M6.96 13.71a5.41 5.41 0 0 1 0-3.42V7.96h-3a9 9 0 0 0 0 8.08l3-2.33z" fill="#FBBC05"></path>
-                    <path d="M12 6.58c1.32 0 2.5.45 3.44 1.35l2.58-2.59A9 9 0 0 0 3.96 7.95l3 2.34A5.36 5.36 0 0 1 12 6.58z" fill="#EA4335"></path>
-                    </svg>
-                </span>
-                <span style="vertical-align: middle;">Sign up with Google</span>
-            </button>
-            <button type="button" class="btn btn-light" style="width: 100%;">
-                <span style="color: #1877f2">
-                    <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M21.5 12.058c0-5.28-4.253-9.558-9.5-9.558s-9.5 4.279-9.5 9.558c0 4.771 3.473 8.725 8.016 9.442v-6.68H8.104v-2.762h2.412V9.952c0-2.395 1.417-3.718 3.588-3.718 1.04 0 2.126.186 2.126.186v2.352h-1.198c-1.18 0-1.548.738-1.548 1.494v1.792h2.635l-.421 2.763h-2.214V21.5c4.543-.717 8.016-4.67 8.016-9.442z" fill="currentColor"></path>
-                    </svg>
-                </span>
-                <span style="vertical-align: middle;">Sign up with Facebook</span>
-            </button>
         </div>
     </div>
 </section>
@@ -172,7 +147,7 @@
         EmailConfirmLink = $"{Navigation.BaseUri}account/confirmemail?uid={result.Data}&token={HttpUtility.UrlEncode(token)}";
 
         // Send email and redirect
-        await EmailService.SendEmailConfirmationAsync(Input.Email, Input.FullName, EmailConfirmLink);
+        EmailService.SendEmailConfirmation(Input.Email, Input.FullName, EmailConfirmLink);
         Navigation.NavigateTo($"/account/registerverify/{result.Data}?email={HttpUtility.UrlEncode(Input.Email)}");
     }
 
