--- a/src/Web.WebApp/Pages/_Host.cshtml
+++ b/src/Web.WebApp/Pages/_Host.cshtml
@@ -32,6 +32,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
+    <script src="js/site.js" asp-append-version="true"></script>
     <script src="_framework/blazor.server.js"></script>
     <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
