refact forget and reset password

--- a/src/Web.WebApp/Pages/Account/ForgotPassword.razor
+++ b/src/Web.WebApp/Pages/Account/ForgotPassword.razor
@@ -23,36 +23,43 @@
             <h4>Forgot Password</h4>
         </div>
         <div class="card-body">
-            <div class="mb-3">Enter email address to receive a password reset link.</div>
-            <EditForm Model="@Input" OnValidSubmit="@GenerateResetPasswordEmail">
-                <DataAnnotationsValidator/>
-                <div>
-                    <div class="mb-2">
-                        <InputText id="inputEmail" class="form-control" @bind-Value="@Input.Email" placeholder="Email" autocomplete="off" spellcheck="false"/>
-                        <ValidationMessage For="@(() => Input.Email)"/>
-                    </div>
-                    <div class="mb-2">
-                        <GoogleRecaptcha @ref="googleRecaptcha" SiteKey=@ReCaptchaSetting.Value.SiteKey SecretKey=@ReCaptchaSetting.Value.SecretKey OnCaptchaChanged="@OnCaptchaChanged" />
-                    </div>
-                    <div class="mb-2">
-                        <button type="submit" disabled="@SubmitDisabled" class="btn btn-primary">
-                            <span class="spinner-border spinner-border-sm" hidden="@(!IsSubmitting)" role="status" aria-hidden="true"></span>
-                            <span>Get password reset link</span>
-                        </button>
-                    </div>
-                </div>
-
+            @if (IsSubmitted) {
                 @if (!string.IsNullOrWhiteSpace(InfoMessage))
-                {
-                    <div class="alert alert-info">
-                    <span class="oi oi-info"></span> &nbsp;
-                    @((MarkupString)InfoMessage)
+                    {
+                        <div class="alert alert-info">
+                        <span class="oi oi-info"></span> &nbsp;
+                        @((MarkupString)InfoMessage)
+                        </div>
+                    }
+            } else {
+                <div class="mb-3">Enter email address to receive a password reset link.</div>
+                <EditForm Model="@Input" OnValidSubmit="@GenerateResetPasswordEmail">
+                    <DataAnnotationsValidator/>
+                    <div>
+                        <div class="mb-2">
+                            <InputText id="inputEmail" class="form-control" @bind-Value="@Input.Email" placeholder="Email" autocomplete="off" spellcheck="false"/>
+                            <ValidationMessage For="@(() => Input.Email)"/>
+                        </div>
+                        <div class="mb-2">
+                            <GoogleRecaptcha @ref="googleRecaptcha" SiteKey=@ReCaptchaSetting.Value.SiteKey SecretKey=@ReCaptchaSetting.Value.SecretKey OnCaptchaChanged="@OnCaptchaChanged" />
+                        </div>
+                        <div class="mb-2">
+                            <button type="submit" disabled="@SubmitDisabled" class="btn btn-primary">
+                                <span class="spinner-border spinner-border-sm" hidden="@(!IsSubmitting)" role="status" aria-hidden="true"></span>
+                                <span>Get password reset link</span>
+                            </button>
+                        </div>
                     </div>
-                } else
-                {
-                    <div><br /></div>
-                }
-            </EditForm>
+
+                    @if (!string.IsNullOrWhiteSpace(InfoMessage))
+                    {
+                        <div class="alert alert-info">
+                        <span class="oi oi-info"></span> &nbsp;
+                        @((MarkupString)InfoMessage)
+                        </div>
+                    }
+                </EditForm>
+            }
         </div>
     </div>
 </section>
@@ -65,6 +72,7 @@
 @code {
     public EmailInput Input { get; set; } = new EmailInput();
     public bool IsSubmitting { get; set; }
+    public bool IsSubmitted { get; set; }
     public bool SubmitDisabled { get; set; } = true;
     public string InfoMessage { get; set; }
     public string EmailConfirmLink { get; set; }
@@ -90,20 +98,18 @@
             return;
         }
 
-        InfoMessage = "If your email is registered. Please check your inbox or spam folder, and click on the reset password link. Thank you.";
+        InfoMessage = @"Thank you. We sent the reset password link to your email.
+                    If your email is registered. Please check your inbox or spam folder, and click on the reset password link.";
+        IsSubmitted = true;
 
         var existUser = await UserService.GetUserByEmailAsync(Input.Email);
         if (existUser == null)
         {   // DOT NOT TELL the email is invalid
-            IsSubmitting = false;
-            SubmitDisabled = true;
             return;
         }
 
         if (!UserService.IsEmailConfirmed(existUser.Id))
         {
-            IsSubmitting = false;
-            SubmitDisabled = true;
             return;
         }
 
@@ -114,8 +120,6 @@
         {
             InfoMessage = "Sorry, something went wrong. Please try again later.";
         }
-        IsSubmitting = false;
-        SubmitDisabled = true;
     }
 
     public class EmailInput
