--- a/src/Web.WebApp/Pages/Account/ResetPassword.razor
+++ b/src/Web.WebApp/Pages/Account/ResetPassword.razor
@@ -14,40 +14,55 @@
             <h4>Reset Password</h4>
         </div>
         <div class="card-body">
-            <EditForm Model="@Input" OnValidSubmit="@SetPassword" class="form-floating">
-                <DataAnnotationsValidator/>
-                <div class="has-float-label mb-3">
-                    <InputText type="password" @bind-Value="@Input.Password" id="inputPassword" class="form-control" placeholder="New Password" autocomplete="off" spellcheck="false"/>
-                    <label for="inputPassword">New Password</label>
-                    <ValidationMessage For="@(() => Input.Password)"/>
-                </div>
-                <div class="has-float-label mb-3">
-                    <InputText type="password" @bind-Value="@Input.ConfirmPassword" id="inputConfirmPassword" class="form-control" placeholder="Confirm Password" autocomplete="off" spellcheck="false"/>
-                    <label for="inputConfirmPassword">Confirm Password</label>
-                    <ValidationMessage For="@(() => Input.ConfirmPassword)"/>
-                </div>
-                <div class="mb-3">
-                    <button type="submit" disabled="@IsSubmitting" class="w-100 btn btn-primary">
-                        <span class="spinner-border spinner-border-sm" hidden="@(!IsSubmitting)" role="status" aria-hidden="true"></span>
-                        <span>Set Password</span>
-                    </button>
-                </div>
-            </EditForm>
-            @if (!string.IsNullOrWhiteSpace(SuccessMessage))
+            @if (IsSubmitted)
             {
-                <div class="alert alert-success">
-                    <span class="oi oi-info"></span> &nbsp; @((MarkupString)SuccessMessage)
-                </div>
-            }
+                @if (!string.IsNullOrWhiteSpace(SuccessMessage))
+                {
+                    <div class="alert alert-success">
+                        <span class="oi oi-info"></span> &nbsp; @((MarkupString)SuccessMessage)
+                    </div>
+                }
 
-            @if (!string.IsNullOrWhiteSpace(FailureMessage))
+                @if (!string.IsNullOrWhiteSpace(FailureMessage))
+                {
+                    <div class="alert alert-danger">
+                        <span class="oi oi-warning"></span> &nbsp; @FailureMessage
+                    </div>
+                    <div class="fs-small">Make sure your reset link is not expired.
+                        If you experience any issue, please re-generate the reset password <a href="/account/forgotpassword">link</a> again.
+                    </div>
+                }
+            } else
             {
-                <div class="alert alert-danger">
-                    <span class="oi oi-warning"></span> &nbsp; @FailureMessage
-                </div>
-                <div class="fs-small">Make sure your reset link is not expired.
-                    If you experience any issue, please re-generate the reset password <a href="/account/forgotpassword">link</a> again.
-                </div>
+                <EditForm Model="@Input" OnValidSubmit="@SetPassword" class="form-floating">
+                    <DataAnnotationsValidator/>
+                    <div class="has-float-label mb-3">
+                        <InputText type="password" @bind-Value="@Input.Password" id="inputPassword" class="form-control" placeholder="New Password" autocomplete="off" spellcheck="false"/>
+                        <label for="inputPassword">New Password</label>
+                        <ValidationMessage For="@(() => Input.Password)"/>
+                    </div>
+                    <div class="has-float-label mb-3">
+                        <InputText type="password" @bind-Value="@Input.ConfirmPassword" id="inputConfirmPassword" class="form-control" placeholder="Confirm Password" autocomplete="off" spellcheck="false"/>
+                        <label for="inputConfirmPassword">Confirm Password</label>
+                        <ValidationMessage For="@(() => Input.ConfirmPassword)"/>
+                    </div>
+                    <div class="mb-3">
+                        <button type="submit" disabled="@IsSubmitting" class="w-100 btn btn-primary">
+                            <span class="spinner-border spinner-border-sm" hidden="@(!IsSubmitting)" role="status" aria-hidden="true"></span>
+                            <span>Set Password</span>
+                        </button>
+                    </div>
+                </EditForm>
+
+                @if (!string.IsNullOrWhiteSpace(FailureMessage))
+                {
+                    <div class="alert alert-danger">
+                        <span class="oi oi-warning"></span> &nbsp; @FailureMessage
+                    </div>
+                    <div class="fs-small">Make sure your reset link is not expired.
+                        If you experience any issue, please re-generate the reset password <a href="/account/forgotpassword">link</a> again.
+                    </div>
+                }
             }
         </div>
     </div>
@@ -64,6 +79,7 @@
 
     public InputModel Input { get; set; } = new InputModel();
     public bool IsSubmitting { get; set; }
+    public bool IsSubmitted { get; set; }
     public string SuccessMessage { get; set; }
     public string FailureMessage { get; set; }
 
@@ -89,14 +105,16 @@
             if (IsReset)
             {
                 SuccessMessage = @"Thank you. Your password has been reset successfully. 
-                        <a href='/account/login'>Click here to login</a>.
-                        You are redirect to log in page shortly.";
+                    <a href='/account/login'>Click here to login</a>.
+                    You are redirect to log in page shortly.";
+                IsSubmitted = true;
                 StateHasChanged();
                 var loginPage = $"{NavigationManager.BaseUri}account/login";
                 await JSRuntime.InvokeVoidAsync("redirectToPage", loginPage, 10);
             } else
             {
                 FailureMessage = "Something went wrong. Please try again later";
+                IsSubmitted = false;
                 StateHasChanged();
             }
         }
